# Instruction-generator

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  ProjectOptions.cmake  README.org  README_building.md  README_dependencies.md  TODO.org  justfile
cmake/: GetGitRevisionDescription.cmake  Linker.cmake
configured_files/: CMakeLists.txt  Config.hpp.in
resources/: ADDCCri.td  WantedFormat.cpp
src/: CMakeLists.txt  Error.cpp  Instruction.cpp  InstructionEmitter.cpp  InstructionFileWritter.cpp  SQLEmitter.cpp  SQLInsertEmitter.cpp  SQLQueryEmitter.cpp  SQLTableEmitter.cpp  main.cpp  sqlgen.cpp
src/include/IG/: Error.hpp  Instruction.hpp  InstructionEmitter.hpp  InstructionFileWritter.hpp  Prototype.hpp  SQLInsertEmitter.hpp  SQLQueryEmitter.hpp  SQLTableEmitter.h
